kids cleaning analysis

--- a/notebooks/analysis_kids_cleaning.ipynb
+++ b/notebooks/analysis_kids_cleaning.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -122,8 +122,7 @@
     }
    ],
    "source": [
-    "kids = process_kids(os.path.join(DATA_PATH, 'KiDS/DR4/KiDS.DR4.500k.fits'), kids_cleaning=True,\n",
-    "                        sdss_cleaning=False)"
+    "kids = process_kids(os.path.join(DATA_PATH, 'KiDS/DR4/KiDS.DR4.500k.fits'), kids_cleaning=True, sdss_cleaning=False)"
    ]
   },
   {
@@ -1182,7 +1181,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1212,7 +1213,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1625,7 +1628,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1655,7 +1660,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2261,7 +2268,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2291,7 +2300,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2330,7 +2341,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2360,7 +2373,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2385,6 +2400,195 @@
    ],
    "source": [
     "sns.pairplot(kids[cols_of_interest].sample(4000))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Flag changes with magnitude"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Flag_1</th>\n",
+       "      <th>Flag_2</th>\n",
+       "      <th>IMAFLAGS_ISO_1</th>\n",
+       "      <th>MASK_2</th>\n",
+       "      <th>MASK_13</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>r 19.5 - 20.0</td>\n",
+       "      <td>0.1197</td>\n",
+       "      <td>0.2604</td>\n",
+       "      <td>0.0013</td>\n",
+       "      <td>0.1413</td>\n",
+       "      <td>0.1453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>r 20.0 - 20.5</td>\n",
+       "      <td>0.1205</td>\n",
+       "      <td>0.2486</td>\n",
+       "      <td>0.0012</td>\n",
+       "      <td>0.1417</td>\n",
+       "      <td>0.1463</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>r 20.5 - 21.0</td>\n",
+       "      <td>0.1161</td>\n",
+       "      <td>0.2348</td>\n",
+       "      <td>0.0010</td>\n",
+       "      <td>0.1475</td>\n",
+       "      <td>0.1489</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>r 21.0 - 21.5</td>\n",
+       "      <td>0.1112</td>\n",
+       "      <td>0.2193</td>\n",
+       "      <td>0.0005</td>\n",
+       "      <td>0.1424</td>\n",
+       "      <td>0.1421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>r 21.5 - 22.0</td>\n",
+       "      <td>0.1090</td>\n",
+       "      <td>0.2063</td>\n",
+       "      <td>0.0006</td>\n",
+       "      <td>0.1396</td>\n",
+       "      <td>0.1369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>r 22.0 - 22.5</td>\n",
+       "      <td>0.1059</td>\n",
+       "      <td>0.1943</td>\n",
+       "      <td>0.0006</td>\n",
+       "      <td>0.1394</td>\n",
+       "      <td>0.1332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>r 22.5 - 23.0</td>\n",
+       "      <td>0.1045</td>\n",
+       "      <td>0.1895</td>\n",
+       "      <td>0.0005</td>\n",
+       "      <td>0.1413</td>\n",
+       "      <td>0.1351</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>r 23.0 - 23.5</td>\n",
+       "      <td>0.1057</td>\n",
+       "      <td>0.1847</td>\n",
+       "      <td>0.0003</td>\n",
+       "      <td>0.1420</td>\n",
+       "      <td>0.1405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>r 23.5 - 24.0</td>\n",
+       "      <td>0.0972</td>\n",
+       "      <td>0.1641</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.1402</td>\n",
+       "      <td>0.1398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>r 24.0 - 24.5</td>\n",
+       "      <td>0.0697</td>\n",
+       "      <td>0.1166</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.1357</td>\n",
+       "      <td>0.1302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>r 24.5 - 25.0</td>\n",
+       "      <td>0.0370</td>\n",
+       "      <td>0.0613</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.1292</td>\n",
+       "      <td>0.1167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>r 25.0 - 25.5</td>\n",
+       "      <td>0.0124</td>\n",
+       "      <td>0.0183</td>\n",
+       "      <td>0.0002</td>\n",
+       "      <td>0.1251</td>\n",
+       "      <td>0.1070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>r 25.5 - 26.0</td>\n",
+       "      <td>0.0152</td>\n",
+       "      <td>0.0108</td>\n",
+       "      <td>0.0007</td>\n",
+       "      <td>0.1537</td>\n",
+       "      <td>0.1508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>r 26.0 - 26.5</td>\n",
+       "      <td>0.0357</td>\n",
+       "      <td>0.0357</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.2500</td>\n",
+       "      <td>0.3839</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Flag_1  Flag_2 IMAFLAGS_ISO_1  MASK_2 MASK_13\n",
+       "r 19.5 - 20.0  0.1197  0.2604         0.0013  0.1413  0.1453\n",
+       "r 20.0 - 20.5  0.1205  0.2486         0.0012  0.1417  0.1463\n",
+       "r 20.5 - 21.0  0.1161  0.2348         0.0010  0.1475  0.1489\n",
+       "r 21.0 - 21.5  0.1112  0.2193         0.0005  0.1424  0.1421\n",
+       "r 21.5 - 22.0  0.1090  0.2063         0.0006  0.1396  0.1369\n",
+       "r 22.0 - 22.5  0.1059  0.1943         0.0006  0.1394  0.1332\n",
+       "r 22.5 - 23.0  0.1045  0.1895         0.0005  0.1413  0.1351\n",
+       "r 23.0 - 23.5  0.1057  0.1847         0.0003  0.1420  0.1405\n",
+       "r 23.5 - 24.0  0.0972  0.1641         0.0001  0.1402  0.1398\n",
+       "r 24.0 - 24.5  0.0697  0.1166         0.0001  0.1357  0.1302\n",
+       "r 24.5 - 25.0  0.0370  0.0613         0.0001  0.1292  0.1167\n",
+       "r 25.0 - 25.5  0.0124  0.0183         0.0002  0.1251  0.1070\n",
+       "r 25.5 - 26.0  0.0152  0.0108         0.0007  0.1537  0.1508\n",
+       "r 26.0 - 26.5  0.0357  0.0357         0.0000  0.2500  0.3839"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "step = 0.5\n",
+    "df = pd.DataFrame(columns=['Flag_1', 'Flag_2', 'IMAFLAGS_ISO_1', 'MASK_2', 'MASK_13'])\n",
+    "for flag in df.columns:\n",
+    "    for max_mag in np.arange(20, 27, step):\n",
+    "        mean_val = kids.loc[(kids['MAG_GAAP_r'] < max_mag) & (kids['MAG_GAAP_r'] > max_mag - 1), flag].mean()\n",
+    "        df.loc['r {} - {}'.format(max_mag - step, max_mag), flag] = '{:.4f}'.format(mean_val)\n",
+    "display(df)"
    ]
   },
   {
