inference on KiDS data

--- a/notebooks/analysis_kids_cleaning.ipynb
+++ b/notebooks/analysis_kids_cleaning.ipynb
@@ -2593,6 +2593,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: how SG2DPHOT changes when middle CLASS_STAR values are removed, is there still more 0 values?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
