cleaning plots update

--- a/notebooks/anaylysis_gaia_motions.ipynb
+++ b/notebooks/anaylysis_gaia_motions.ipynb
@@ -385,9 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -512,6 +510,61 @@
     "kids_x_sdss_x_gaia_clean = process_gaia(kids_x_sdss_x_gaia, parallax_error=1, pm_error=1)\n",
     "print(get_column_desc(kids_x_sdss_x_gaia_clean['CLASS']))\n",
     "gaia_motion_analysis(kids_x_sdss_x_gaia_clean, class_col='CLASS')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Acceptable from experiment results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SDSS parallax\n",
+      "-0.006571200000000004\n",
+      "train parallax\n",
+      "0.005423999999999999\n",
+      "SDSS pm ra\n",
+      "-0.0515076\n",
+      "train pm ra\n",
+      "-0.147763\n",
+      "SDSS pm dec\n",
+      "-0.1355006\n",
+      "train pm dec\n",
+      "-0.14019720000000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "gal = 0.0199\n",
+    "qso = 0.9706\n",
+    "star = 0.0095\n",
+    "\n",
+    "print('SDSS parallax')\n",
+    "print(qso * -0.017 + star * 0.71 + gal * 0.16)\n",
+    "\n",
+    "print('train parallax')\n",
+    "print(qso * -0.005 + star * 0.6 + gal * 0.23)\n",
+    "\n",
+    "print('SDSS pm ra')\n",
+    "print(qso * -0.021 + star * -1.81 + gal * -0.70)\n",
+    "\n",
+    "print('train pm ra')\n",
+    "print(qso * -0.010 + star * -6.30 + gal * -3.93)\n",
+    "\n",
+    "print('SDSS pm dec')\n",
+    "print(qso * -0.026 + star * -6.37 + gal * -2.50)\n",
+    "\n",
+    "print('train pm dec')\n",
+    "print(qso * -0.012 + star * -6.20 + gal * -3.50)"
    ]
   },
   {
