t-sne visualizat-sne visualization for publication

--- a/notebooks/experiment_methods.ipynb
+++ b/notebooks/experiment_methods.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +45,24 @@
     "sns.set_style('ticks')\n",
     "sns.set_style('whitegrid')\n",
     "sns.set_palette('cubehelix')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data shape: (501754, 44)\n",
+      "Droping NANs: 226903 (45.22%) left\n"
+     ]
+    }
+   ],
+   "source": [
+    "kids = process_kids(os.path.join(DATA_PATH, 'KiDS/DR4/KiDS.DR4.500k.fits'), columns=COLUMNS_KIDS_ALL)"
    ]
   },
   {
