--- a/notebooks/dataset_inference.ipynb
+++ b/notebooks/dataset_inference.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -35,7 +35,7 @@
     "from env_config import DATA_PATH\n",
     "from utils import get_column_desc, pretty_print_feature\n",
     "from data import get_mag_str, BAND_COLUMNS, COLUMNS_KIDS_ALL, COLUMNS_SDSS, FEATURES, process_kids, process_bitmaps, \\\n",
-    "                 get_inference_subsets, get_joint_inference_subsets\n",
+    "                 get_inference_subsets, get_joint_inference_subsets, add_subset_info\n",
     "from plotting import plot_embedding, plot_histograms"
    ]
   },
@@ -110,6 +110,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kids = add_subset_info(kids, extra_info=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "extrapolation - 103094 (45.34%)\n",
+      "safe - 47047 (20.69%)\n",
+      "unsafe - 77231 (33.97%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(get_column_desc(kids['subset']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "extrapolation - 34582 (35.31%)\n",
+      "unsafe - 63365 (64.69%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(get_column_desc(kids.loc[kids['MAG_GAAP_r'] > 23.5, 'subset']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "extrapolation - 9852 (18.95%)\n",
+      "unsafe - 42129 (81.05%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(get_column_desc(kids.loc[kids['MAG_GAAP_r'] > 24, 'subset']))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -160,6 +224,16 @@
      ]
     }
    ],
+   "source": [
+    "for subset_name, subset in kids_subsets.items():\n",
+    "    print(subset_name, subset.shape[0], round(subset.shape[0] / kids.shape[0] * 100, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for subset_name, subset in kids_subsets.items():\n",
     "    print(subset_name, subset.shape[0], round(subset.shape[0] / kids.shape[0] * 100, 1))"
