--- a/notebooks/experiment_methods.ipynb
+++ b/notebooks/experiment_methods.ipynb
@@ -74,24 +74,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data shape: (501754, 44)\n",
-      "Droping NANs: 226903 (45.22%) left\n"
-     ]
-    }
-   ],
-   "source": [
-    "kids = process_kids(os.path.join(DATA_PATH, 'KiDS/DR4/KiDS.DR4.500k.fits'), columns=COLUMNS_KIDS_ALL)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Data shape: (152244, 49)\n",
       "Droping NANs: 130777 (85.90%) left\n"
      ]
@@ -103,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,6 +100,27 @@
    ],
    "source": [
     "print(get_column_desc(kids_x_sdss['CLASS']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21.30841522216797\n",
+      "21.817911682128905\n",
+      "21.980011367797854\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(kids_x_sdss['MAG_GAAP_r'].quantile(q=0.9))\n",
+    "print(kids_x_sdss['MAG_GAAP_r'].quantile(q=0.98))\n",
+    "print(kids_x_sdss['MAG_GAAP_r'].quantile(q=0.99))"
    ]
   },
   {
